--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -40,6 +40,13 @@
 #body-div {
   padding-left: 0;
   padding-right: 0;
+  overflow-x: hidden;
+}
+.cover {
+  height: 100vh;
+  z-index: 10;
+  display: flex;
+  flex-flow: column;
 }
 #navbar {
   width: 100%;
@@ -49,12 +56,15 @@
   background-color: #343a40;
 }
 #tsparticles {
-  bottom: 0;
-  height: 100vh;
-  width: 100vw;
+  height: 100%;
+  width: 100%;
   z-index: -1;
-  position: fixed;
+  position: absolute;
 }
+#page-show {
+  flex-grow: 1;
+}
+
 .typing {
   color: white;
   display: inline-block;
