--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -70,12 +70,23 @@
   display: inline-block;
 }
 .typing-main {
-  color: red;
+  background-image: linear-gradient(
+    270.97deg,
+    #ffe580 -21.36%,
+    #ff7571 -2.45%,
+    #ea5dad 26.84%,
+    #c2a0fd 64.15%,
+    #3bf0e4 108.29%,
+    #b2f4b6 159.03%
+  );
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Raleway", sans-serif;
-  font-weight: 700;
 }
 .typing-para {
+  background: linear-gradient(87.54deg, #e0f0e8 -6.8%, #fdf9d5 84.14%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   font-family: "Orbitron", sans-serif;
   font-size: 1.5rem;
-  left: 100px;
 }
