--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -37,19 +37,19 @@
   }
 }
 ::-webkit-scrollbar {
-  width: 5px;
+  width: 5px !important;
 }
 ::-webkit-scrollbar-track {
-  width: 5px;
-  background-color: black;
+  width: 5px !important;
+  background-color: black !important;
 }
 
 ::-webkit-scrollbar-thumb {
-  background: red;
-  border-radius: 10px;
+  background: red !important;
+  border-radius: 10px !important;
 }
 ::-webkit-scrollbar-thumb:hover {
-  background: orange;
+  background: orange !important;
 }
 #body-div {
   padding-left: 0;
