--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -103,3 +103,8 @@
   font-family: "Orbitron", sans-serif;
   font-size: 1.5rem;
 }
+.heading {
+  text-shadow: 1.4px 2.3px;
+  margin-top: 2.5vh;
+  margin-bottom: 2vh;
+}
